# computorv1

./: Dockerfile  LICENSE.md  README.md  computor.opam  dune  dune-project  equation.txt  index.html
.github/workflows/: build.yml  deploy.yml
api/: index.html
api/computor/: index.html
api/computor/Computor/: index.html
api/computor/Computor/Ast/: index.html
api/computor/Computor/Lexer/: index.html
api/computor/Computor/Parser/: index.html
api/computor/Computor/Pp/: index.html
api/computor/Computor/Solver/: index.html
api/computor/Computor/Try_utils/: index.html
api/computor/Computor__Ast/: index.html
api/computor/Computor__Lexer/: index.html
api/computor/Computor__Parser/: index.html
api/computor/Computor__Pp/: index.html
api/computor/Computor__Solver/: index.html
api/computor/Computor__Try_utils/: index.html
coverage/: index.html
coverage/src/: ast.ml.html  lexer.ml.html  parser.ml.html  pp.ml.html  solver.ml.html
doc/: index.html
src/: 7  ast.ml  computor.ml  dune  lexer.ml  lexer.mll  main.ml  parser.mly  pp.ml  solver.ml  try_utils.ml
test/: dune  test.ml  test_computor.ml  test_parser.ml  test_pp.ml  test_solver.ml
tests/: dune  test.ml
try/: dune  index.html  script.js  style.css  trycomputorv1.bc.js  trycomputorv1.bc.runtime.js  trycomputorv1.ml  trycomputorv1.pp.ml
try/.merlin-conf/: exe-trycomputorv1
try/.trycomputorv1.eobjs/byte/: dune__exe__Trycomputorv1.cmi  dune__exe__Trycomputorv1.cmo  dune__exe__Trycomputorv1.cmo.js  dune__exe__Trycomputorv1.cmt
